<resources>
    <string name="app_name">DynamicForm</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="ok">Ok</string>
    <string name="clear">Clear</string>
    <string name="warning">Warning</string>
    <string name="draft_save">Draft Save</string>
    <string name="submit">Submit</string>


    <string name="saved">Saved</string>
    <string name="synced">Synced</string>
    <string name="draft">Draft</string>

    <!--<string name="choose_language">Choose Language / भाषा चुनें</string>-->
    <string name="cancel">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="pending_questions">Pending Questions</string>

    <string name="select_date">Select Date</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="delete">Delete</string>
    <string name="data_will_be_removed">Data will be removed</string>
    <string name="data_deleted">Data Deleted</string>
    <string name="save_data">Save data</string>
    <string name="do_you_want_to_save_as_draft">Do you want to save as draft</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="aadhaar_card_number">Aadhaar Card Number</string>
    <string name="permission_required">Permission Required</string>
    <string name="please_accept_the_both_permissions_camera_and_storage">Please accept permissions for Camera and Storage</string>
    <string name="to_fill_this_form_please_accept_the_gps_permission">To fill this form, Please accept the GPS permission</string>
    <string name="login_permission">Please accept the GPS, Storage and Phone State permission</string>
    <string name="please_fill_at_least_one_field">Please fill at least one field</string>
    <string name="questions_answered">" Answered Questions "</string>
    <string name="sorry_failed_to_capture_photo">Sorry! Failed to capture photo</string>
    <string name="sorry_failed_to_pick_photo">Failed to pick Photo</string>
    <string name="form_submitted_successfully">Form submitted successfully</string>
    <string name="image_not_captured">Image incorrect!! Please select another Image.</string>
    <string name="form_saved_draft">Form saved as draft</string>
    <string name="gps_is_required_for_this_form">GPS is required for this form</string>
    <string name="app_update_is_require">Please update the App !</string>
    <string name="more_questions">More Questions...</string>
    <string name="question_still_not_loaded">Question not loaded in the view please load all the questions</string>
    <string name="search_txt">Search...</string>
    <string name="preparing_form">Preparing Form</string>
    <string name="loading">Loading...</string>


    <string name="view_details">View Details</string>
    <string name="add_details">Add Details</string>
    <string name="play">Play</string>
    <string name="reset">Reset</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="information">Information</string>
    <string name="option_not_availble">Option not available!</string>


    <string name="get_location">Get Location</string>
    <string name="Acurracy">Accuracy</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>


    <string name="alert_msg">Alert : Question </string>
    <string name="flagged">Flagged</string>
    <string name="flagged_draft">Flagged Draft</string>
    <string name="flagged_saved">Flagged Saved</string>
    <string name="error_msg">Error Message</string>
    <string name="additional_info">Additional Info</string>
    <string name="retry">Retry</string>
    <string name="consent">Consent</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="rejected_duplicate">Returned (Duplicate)</string>
    <string name="no_child_question_found">Questions not found!</string>
    <string name="convert">Convert</string>
    <string name="rejected_dy_not_found">Returned (No Parent)</string>
    <string name="re_submmit_response">Are you sure to re-submit the response</string>


    <string-array name="unit_length">
        <item>Metre</item>
        <item>Kilometre</item>
        <item>Mile</item>
        <item>Foot</item>
        <item>Yard</item>
    </string-array>


    <string-array name="unit_area">
        <item>Sq. Metre</item>
        <item>Acre</item>
        <item>Bhigha</item>
        <item>Katha</item>
        <item>Dhur</item>
        <item>Sq. Feet</item>
        <item>Sq. Yard</item>
    </string-array>

    <string-array name="unit_temperature">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="unit_time">
        <item>Second</item>
        <item>Minute</item>
        <item>Hour</item>
    </string-array>


    <string-array name="unit_mass">
        <item>Kilo Gram</item>
        <item>Gram</item>
        <item>Metric Tonne</item>
        <item>Pound (lb)</item>
    </string-array>

    <string-array name="unit_volume">
        <item>Litre</item>
        <item>Milli Litre</item>
        <item>Cubic Litre</item>
    </string-array>


    <string-array name="unit_speed">
        <item>km/hr</item>
        <item>m/sec</item>
    </string-array>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dashboard">Dashbaord</string>
    <string name="forms">Forms</string>

</resources>
