<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_order"
            android:layout_width="@dimen/orderviewsize"
            android:layout_height="@dimen/orderviewsize"
            android:background="@drawable/white_circle"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="1"
            android:textSize="@dimen/ordertextsize2" />

        <TextView
            android:id="@+id/titletext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:text="Enter Name" />
        <ImageView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_information"
            android:paddingRight="4dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_error_msg"
            android:paddingRight="4dp"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/red"
            android:id="@+id/star"
            android:gravity="end"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/btnPlay"
            style="@style/buttonsOnQuestionStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/saved"
            android:drawableLeft="@drawable/ic_play_arrow_white_24px"
            android:text="@string/play"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btnStop"
            style="@style/buttonsOnQuestionStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_submit_btns"
            android:background="@color/saved"
            android:drawableLeft="@drawable/ic_stop_white_24dp"
            android:text="@string/stop" />

        <TextView
            android:id="@+id/btnRecord"
            style="@style/buttonsOnQuestionStyle"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/margin_submit_btns"
            android:layout_weight="1"
            android:background="@color/saved"
            android:drawableLeft="@drawable/ic_mic_white"
            android:text="@string/record" />

        <TextView
            android:id="@+id/btnReset"
            style="@style/buttonsOnQuestionStyle"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/margin_submit_btns"
            android:layout_weight="1"
            android:background="@color/saved"
            android:drawableLeft="@drawable/ic_refresh"
            android:text="@string/reset" />

    </LinearLayout>


</LinearLayout>